--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "build": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^1.4.2",
+    "nuxt": "^2.10.2",
     "yaml-loader": "^0.5.0"
   },
   "devDependencies": {
+    "json-loader": "^0.5.7",
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0"
   }
